web/style.css
/* ... */
label.separate_input {
    padding-bottom: 0;
}

.standalone_input {
    padding: var(--side-pad);
    padding-top: 0;
}

.colour_popover {
    border-radius: 8px;
    position: fixed;
    margin-top: 40vh;
    box-shadow: 0 0 100px rgba(0,0,0,0.5);
    z-index: 25;
}

.popover_darken {
    z-index: 19;
    position: fixed;
    background-color: rgba(0,0,0,1);
    opacity: 0;
    pointer-events: none;
    transition: opacity 0.25s;
}

.popover_darken.active {
    pointer-events: revert;
    display: block;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    opacity: 0.4;
}

.colour_popover .react-colorful {
    width: 30vh;
    height: 30vh;
}

.label_unit {
    font-weight: normal;
}

.label_row {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    margin-bottom: 1vh;
}

.input_row {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 2vh;
}

.flex_expand {
    flex: 100;
}

input[type=text], textarea {
    color: var(--text-color);
    background: var(--input-color);
    border: 2px solid var(--border-color);
    border-radius: 1vh;
    padding: 1vh;
    text-align: center;
    font-size: 2.5vh;
    flex: 1;
    resize: none;
    box-sizing: border-box;
    overflow: auto;
}

textarea {
    height: 100%;
    text-align: left;
}

input[type=range] {
    flex: 1;
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    outline: none;
    height: 2vh;
    border-radius: 2vh;
    background-color: var(--input-color);
}

.is_webkit input[type='range'] {
    -webkit-appearance: none;
}

.is_webkit input[type='range']::-webkit-slider-runnable-track {
    height: 2vh;
    -webkit-appearance: none;
    color: var(--input-color);
    margin-top: -1px;
}

.is_webkit input[type='range']::-webkit-slider-thumb {
    -webkit-appearance: none;
    appearance: none;
    -moz-appearance: none;
    width: var(--slider-thumb-size);
    height: var(--slider-thumb-size);
    border-radius: var(--slider-thumb-size);
    background: var(--bg-color);
    outline: none;
    border: 2px solid var(--accent-color);
    cursor: pointer;
    margin-top: calc(-1vh);
}
.is_webkit input[type='range']::-webkit-slider-thumb:hover {
    outline-color: var(--bg-color);
    background: var(--accent-color);
}

input[type=range]::-moz-range-progress {
    background-color: var(--accent-color);
    appearance: none;
    -moz-appearance: none;
    height: 2vh;
    border-radius: 2vh;
    -webkit-appearance: none;
}

.preview_box {
    height: calc(var(--preview-size) * 1vh);
    border-radius: var(--side-pad);
    border: 2px solid var(--accent-color);
    overflow: clip;
    background: var(--input-color);
    margin: var(--side-pad);
    display: flex;
    justify-content: center;
    align-items: center;
    cursor: pointer;
    position: relative;
}

.preview_inactive_text {
    color: var(--accent-color);
    text-align: center;
    font-size: 4vh;
    padding: var(--side-pad);
}

.toast {
    background-color: var(--accent-color);
    color: var(--bg-color);
    font-size: 2.5vh;
    padding: var(--side-pad);
    border-radius: var(--side-pad);
}

input[type=range]::-webkit-progress-value {
    -webkit-appearance: none;
}

input[type=range]::-moz-range-thumb {
    appearance: none;
    -moz-appearance: none;
    width: var(--slider-thumb-size);
    height: var(--slider-thumb-size);
    border-radius: var(--slider-thumb-size);
    background: var(--bg-color);
    border: 2px solid var(--accent-color);
    outline: none;
    cursor: pointer;
}

input[type='range']::-moz-range-thumb:hover {
    outline-color: var(--bg-color);
    background: var(--accent-color);
}

input[type=checkbox] {
    display: none;
}

label.check_label {
    flex-direction: row;
    justify-content: space-between;
}

.checkbox {
    width: 5vh;
    height: 5vh;
    background-color: var(--input-color);
    border: 2px solid var(--accent-color);
    color: var(--input-color);
    border-radius: 1vh;
    display: flex;
    justify-content: center;
    align-items: center;
    cursor: pointer;
}

.checkbox:hover {
    background-color: var(--hover-color);
}

label input[type=checkbox]:checked ~ .checkbox {
    background-color: var(--accent-color);
    color: var(--bg-color);
}

input[type=checkbox]:checked {
}

.hide_when_not_big_primary {
    display: none;
}

@media screen and (max-width: 800px) {
    #app {
        padding: 0;
    }

    .page {
        aspect-ratio: unset;
        width: 100%;
        height: 100%;
        flex: 1;
    }
}

@media screen and (min-aspect-ratio: 6/5) and (min-width: 801px) {
    .page:not(.primary):not(.secondary) {
        margin-right: calc(var(--screen-aspect) * (100vh - var(--page-padding) * 2) + var(--page-padding));
    }
    .page.secondary {
        display: flex;
    }
    .page.primary {

    }

    .page.primary .hide_when_big_primary {
        display: none;
    }

    .page.primary .hide_when_not_big_primary {
        display: revert;
    }
}

.big_header {
    margin-top: -2.2vh;
    font-size: 8vh;
    font-weight: lighter;
    padding: 0 var(--side-pad) 4vh var(--side-pad);
}

.big_header b {
    font-weight: 500;
}

.colour_box {
    width: 5vh;
    height: 5vh;
    border-radius: 1vh;
    border: 2px solid var(--bg-color);
    outline: 1px solid var(--border-color);
    cursor: pointer;
}

.colour_box.active {
    z-index: 20;
}

.colour_box:hover {
    border-color: var(--input-color);
}

.wide_button {
    padding: 1vh var(--side-pad);
    font-size: 5vh;
    width: 100%;
    background-color: var(--bg-color);
    color: var(--dark-accent-color);
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    cursor: pointer;
    transition: background-color 0.3s;
}


.wide_button:hover, .wide_button.active {
    background-color: var(--hover-color);
}
/* ... */

